Attempt to fix nav on mobile

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -206,6 +206,13 @@ input[type=submit]:hover {
 }
 
 @media all and (max-width: 750px) {
+	.navigation-list {
+		display: flex;
+		flex-shrink: 1;
+	}
+}
+
+@media all and (max-width: 750px) {
   .grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
@@ -238,20 +245,6 @@ input[type=submit]:hover {
 	width: 100%;
 	max-width: 400px
 	height: auto;
-}
-
-@media screen and (max-width: 600px) {
-	.navigation-list.responsive {position: relative;}
-	.navigation-list.responsive a.navigation-list__item {
-		position: absolute;
-		right: 0;
-		top: 0;
-	}
-	.navigation-list.responsive a {
-		float: none;
-		display: block;
-		text-align: left;
-	}
 }
 
 @-webkit-keyframes color-change {
